--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@ layout: compress
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
+
+<!-- Global site tag (gtag.js) - Google Analytics START -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135451904-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-135451904-1');
+</script>
+<!-- Global site tag (gtag.js) - Google Analytics END -->
+
+    
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
