--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@ layout: compress
     <header class="header">
         <h1>Geo for Teachers<span>Crisis Mapping Project, AOYAMA VISION</span></h1>
         <nav class="links">
-            <a href="#"><i class="fa fa-twitter-square fa-3x"></i></a>
-            <a href="#"><i class="fa fa-instagram fa-3x"></i></a>
-            <a href="#"><i class="fa fa-facebook-square fa-3x"></i></a>
-            <a href="#"><i class="fa fa-tumblr-square fa-3x"></i></a>
+            <a href="https://twitter.com/search?q=%23dronebird&src=typd"><i class="fa fa-twitter-square fa-3x"></i></a>
+            <a href="https://www.instagram.com/explore/tags/dronebird/?hl=ja"><i class="fa fa-instagram fa-3x"></i></a>
+            <a href="https://www.facebook.com/furuhashilab/"><i class="fa fa-facebook-square fa-3x"></i></a>
+            <a href="https://medium.com/furuhashilab"><i class="fa fa-tumblr-square fa-3x"></i></a>
+            <a href="https://github.com/furuhashilab/"><i class="fa fa-github-square fa-3x"></i></a>
         </nav>
     </header>
     <div class="content">
