--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ layout: compress
             <a href="https://www.instagram.com/explore/tags/dronebird/?hl=ja"><i class="fa fa-instagram fa-3x"></i></a>
             <a href="https://www.facebook.com/furuhashilab/"><i class="fa fa-facebook-square fa-3x"></i></a>
             <a href="https://medium.com/furuhashilab"><i class="fa fa-tumblr-square fa-3x"></i></a>
-            <!-- a href="https://medium.com/furuhashilab"><i class="fa fa-medium-square fa-3x"></i></a-->
+            <a href="https://medium.com/furuhashilab"><i class="fa fa-medium fa-3x"></i></a>
             <a href="https://github.com/furuhashilab/"><i class="fa fa-github-square fa-3x"></i></a>
         </nav>
     </header>
