--- a/index.html
+++ b/index.html
@@ -77,13 +77,16 @@ layout: compress
                         </div>
                         <div class="card__copy">
                             <div class="meta">
-                                <img class="meta__avatar" src="{{ post.avatar }}"/>
-                                <span class="meta__author">{{ post.author }}</span>
-                                <span class="meta__date">{{ post.date | date: "%Y-%m-%d" }}</span>
+                                <!--img class="meta__avatar" src="{{ post.avatar }}"/-->
+                                <!--span class="meta__author">{{ post.author }}</span-->
+                                <!--span class="meta__date">{{ post.date | date: "%Y-%m-%d" }}</span-->
                             </div>
                             {{ post.content }}
                         </div>
                     </div>
+                  
+                  <a href="http://crisismapping.aoyamavision.com/">http://crisismapping.aoyamavision.com</a><br />
+                  
                 </div>
             </div>
             {% endfor %}
