--- a/index.html
+++ b/index.html
@@ -89,10 +89,14 @@ layout: compress
             {% endfor %}
             <!-- /cards -->
         </div>
-    </div>
+      
+        <div class="content">
+                  <a href="http://crisismapping.aoyamavision.com/">http://crisismapping.aoyamavision.com</a><br />
+        </div>
+  
+  </div>
     <!-- /container -->
 
-                  <a href="http://crisismapping.aoyamavision.com/">http://crisismapping.aoyamavision.com</a><br />
   
   
 </div>
