--- a/index.html
+++ b/index.html
@@ -90,9 +90,16 @@ layout: compress
             <!-- /cards -->
         </div>
       
-        <div class="content">
-                  <a href="http://crisismapping.aoyamavision.com/">http://crisismapping.aoyamavision.com</a><br />
-        </div>
+    <div class="footer">
+        <h1>Geo for Teachers<span>Crisis Mapping Project, AOYAMA VISION</span></h1>
+        <nav class="links">
+            <a href="https://twitter.com/search?q=%23dronebird&src=typd"><i class="fa fa-twitter-square fa-3x"></i></a>
+            <a href="https://www.instagram.com/explore/tags/dronebird/?hl=ja"><i class="fa fa-instagram fa-3x"></i></a>
+            <a href="https://www.facebook.com/furuhashilab/"><i class="fa fa-facebook-square fa-3x"></i></a>
+            <a href="https://github.com/furuhashilab/"><i class="fa fa-github-square fa-3x"></i></a>
+            <a href="https://medium.com/furuhashilab"><i class="fa fa-medium fa-3x"></i></a>
+        </nav>
+    </div>
   
   </div>
     <!-- /container -->
