--- a/index.html
+++ b/index.html
@@ -91,13 +91,11 @@ layout: compress
         </div>
       
     <div class="footer">
-        <h1>Geo for Teachers<span>Crisis Mapping Project, AOYAMA VISION</span></h1>
+      <h3>powered by <a href="https://medium.com/furuhashilab">Furuhashi Laboratory, CC BY 4.0</a></h３>
         <nav class="links">
-            <a href="https://twitter.com/search?q=%23dronebird&src=typd"><i class="fa fa-twitter-square fa-3x"></i></a>
-            <a href="https://www.instagram.com/explore/tags/dronebird/?hl=ja"><i class="fa fa-instagram fa-3x"></i></a>
-            <a href="https://www.facebook.com/furuhashilab/"><i class="fa fa-facebook-square fa-3x"></i></a>
-            <a href="https://github.com/furuhashilab/"><i class="fa fa-github-square fa-3x"></i></a>
-            <a href="https://medium.com/furuhashilab"><i class="fa fa-medium fa-3x"></i></a>
+            <a href="https://sites.google.com/view/geoclass2020/">Collaborating with "地理A・地理Bオンライン教材WEBサイト"</a>
+            <a href="http://crisismapping.aoyamavision.com/">Crisis Mapping Portal</a>
+            <!--a href="https://www.facebook.com/furuhashilab/"><i class="fa fa-facebook-square fa-3x"></i></a-->
         </nav>
     </div>
   
