--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@ layout: compress
             <!-- /cards -->
         </div>
       
-    <div class="footer">
-      <h3>powered by <a href="https://medium.com/furuhashilab">Furuhashi Laboratory, CC BY 4.0</a></h３>
+    <header class="header">
+      <h1><span>powered by <a href="https://medium.com/furuhashilab">Furuhashi Laboratory, CC BY 4.0</a></span></h1>
         <nav class="links">
-            <a href="https://sites.google.com/view/geoclass2020/">Collaborating with "地理A・地理Bオンライン教材WEBサイト"</a>
+            <a href="https://sites.google.com/view/geoclass2020/">Collaborating with "地理A・地理Bオンライン教材WEBサイト"</a>　｜　
             <a href="http://crisismapping.aoyamavision.com/">Crisis Mapping Portal</a>
             <!--a href="https://www.facebook.com/furuhashilab/"><i class="fa fa-facebook-square fa-3x"></i></a-->
         </nav>
-    </div>
+    </header>
   
   </div>
     <!-- /container -->
